@@ -16,7 +16,6 @@
     "optimist": "0.2.8",
     "request": "2.9.153",
     "clean-css": "0.3.2",
-    "less": "1.3.0",
     "std": "0.1.33",
     "require": "0.4.8"
   },
