@@ -1,5 +1,7 @@
 Intended v0.2.20
 + Add support for automatic less preprocessing of <link ref="stylesheet/less" ... /> elements
++ Add support for stylus
++ Automatically detect that less or stylus is required, and install them dynamically at runtime if needed
 
 v0.2.19
 + Disabled minification for now
